add:settingを追加し、threecanvas01を追加

--- a/src/pages/three/index.astro
+++ b/src/pages/three/index.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from '../../layouts/Layout.astro';
-import ThreeCanvas from '../../components/ThreeCanvas.jsx';
+import ThreeCanvas from '../../components/three/ThreeCanvas.jsx';
 ---
 
 <Layout>
