--- a/src/pages/three04/index.astro
+++ b/src/pages/three04/index.astro
@@ -10,7 +10,7 @@ import ThreeCanvas04 from "../../components/three/ThreeCanvas04.jsx";
       <span>Three.js</span>
       <span>Three.js</span>
     </h1>
-    <ThreeCanvas04 client:only="react" />
+    <ThreeCanvas04 elementId="scrollContainer__heading1" client:only="react" />
   </div>
 </Layout>
 
